--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 da paixão entre seu consumidor</br>
                 e sua marca.
             </h1>
-            <button id="button-cta-home">Começar ---</button>
+            <button id="button-cta-home">Começar</button>
 
         </div>
     </div>
@@ -47,10 +47,10 @@
                     <li class="nav2-li"> Works fast</li>
                 </a>
                 <a href="">
-                    <li class="nav2-li"> Portfolio</li>
+                    <li class="nav2-li"> Equipe</li>
                 </a>
                 <a href="">
-                    <li class="nav2-li"> Enviar Mensagem</li>
+                    <li class="nav2-li"> Sobre</li>
                 </a>
             </ul>
         </div>
